--- a/index.html
+++ b/index.html
@@ -3,30 +3,32 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <title>Password generator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <div id="container">
 
-        <div id="info">
-            <h1>Generate a </h1>
-            <h2>random password</h2>
-            <h3>Never use an insecure password again</h3>
+
+    <div class="container">
+        <div>
+            <h1>Generate a random password </h1>
+            <h2>Never use an insecure password again</h2>
+        </div>
+        <div>
             <button onclick="generatePw()">Generate password</button>
             <button onclick="resetboxes()">Reset</button>
-        </div>
-
-        <div id="inputs">
             <label for="pwlength-el">Password length(5-30)</label>
             <input type="number" id="pwlength-el" min="5" max="30" value="10">
-        </div>
-
-        <div id="generatedpw">
             <p id="generatedpasswordone-el"></p>
         </div>
-
-        <script src="script.js"></script>
     </div>
+
+
+
+
+
+    <script src="script.js"></script>
+
 </body>
 
 </html>
