--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
             <h1>Generate a random password </h1>
             <h2>Never use an insecure password again</h2>
         </div>
-        <div>
-            <button onclick="generatePw()">Generate password</button>
-            <button onclick="resetboxes()">Reset</button>
-            <label for="pwlength-el">Password length(5-30)</label>
-            <input type="number" id="pwlength-el" min="5" max="30" value="10">
-            <p id="generatedpasswordone-el"></p>
+        <div class="pw-container">
+            <div class="btns">
+                <button onclick="generatePw()">Generate password</button>
+                <button onclick="resetboxes()">Reset</button>
+            </div>
+            <div>
+                <label for="pwlength-el">Password length(5-30)</label>
+                <input type="number" id="pwlength-el" min="5" max="20" value="10">
+            </div>
+            <div class="generatedpw">
+                <p id="generatedpasswordone-el"></p>
+            </div>
         </div>
+
     </div>
 
 
